--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,52 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- DrawerLayout debe ser el componente raíz de este layout -->
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/home_lyt_scroll"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".features.home.HomeActivity">
 
-    <LinearLayout
-        android:id="@+id/home_lyt_main"
+    <!-- Layout que contiene elementos de la parte principal (es decir, aquellos que el Navigation Drawer moverá al abrirse el menú) -->
+    <FrameLayout
+        android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/home_lbl_fullname"
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/inm_create_main_lyt_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/home_lbl_fullname"
-            android:textSize="12sp" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="@color/colorPrimary"
+            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-        <TextView
-            android:id="@+id/home_txt_fullname"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textSize="16sp" />
+    </FrameLayout>
 
-        <TextView
-            android:id="@+id/home_lbl_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/home_lbl_email"
-            android:textSize="12sp" />
+    <!-- Contenedor para los contenidos del Navigation Drawer (usar NavigationView hace más rápidas las cosas) -->
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/home_menu" />
 
-        <TextView
-            android:id="@+id/home_txt_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:textSize="16sp" />
-
-        <Button
-            android:id="@+id/home_btn_logout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="logout"
-            android:text="@string/home_btn_logout" />
-    </LinearLayout>
-</ScrollView>
+</android.support.v4.widget.DrawerLayout>
