Avances y correciones en layouts 2019-06-07

--- a/app/src/main/res/layout/activity_inmovable_create.xml
+++ b/app/src/main/res/layout/activity_inmovable_create.xml
@@ -2,12 +2,13 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/inm_create_lyt_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.inmovable.create.view.InmovableCreateActivity">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/inm_create_main_lyt_toolbar"
+        android:id="@+id/inm_create_lyt_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -16,28 +17,34 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v4.view.ViewPager
+        android:id="@+id/inm_create_lyt_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/inm_create_main_lyt_toolbar">
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        app:layout_constraintTop_toBottomOf="@id/inm_create_lyt_toolbar">
 
         <android.support.design.widget.TabLayout
+            android:id="@+id/inm_create_lyt_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <android.support.design.widget.TabItem
+                android:id="@+id/inm_create_tab_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/inmovable_create_txt_main" />
+                android:text="@string/inm_create_tab_main" />
 
             <android.support.design.widget.TabItem
+                android:id="@+id/inm_create_tab_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/inmovable_create_txt_location" />
+                android:text="@string/inm_create_tab_location" />
 
             <android.support.design.widget.TabItem
+                android:id="@+id/inm_create_tab_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/inmovable_create_txt_photos" />
+                android:text="@string/inm_create_tab_photos" />
         </android.support.design.widget.TabLayout>
     </android.support.v4.view.ViewPager>
 </android.support.constraint.ConstraintLayout>
