--- a/app/src/main/res/layout/activity_inmovable_list.xml
+++ b/app/src/main/res/layout/activity_inmovable_list.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/inm_list_lyt_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".features.inmovable.list.view.InmovableListActivity">
@@ -16,24 +17,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
-        android:id="@+id/frameLayout"
+        android:id="@+id/inm_list_lyt_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/inm_list_lyt_toolbar">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/inm_list_lyt_recycler"
+            android:id="@+id/inm_list_lyt_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/inm_list_btn_create"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:clickable="true"
+        android:focusable="true"
+        android:onClick="goToCreate"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@android:drawable/ic_input_add" />
