--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,34 +4,56 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/home_lyt_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:context=".features.home.HomeActivity">
 
-    <!-- Layout que contiene elementos de la parte principal (es decir, aquellos que el Navigation Drawer moverá al abrirse el menú) -->
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <!-- Layout que contiene los elementos de la parte principal (es decir, aquellos que el
+         Navigation Drawer moverá al abrirse el menú) -->
+    <LinearLayout
+        android:id="@+id/home_lyt_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/inm_create_main_lyt_toolbar"
+            android:id="@+id/home_lyt_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary"
-            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+            android:background="@color/colorPrimary" />
 
-    </FrameLayout>
+        <Button
+            android:id="@+id/home_btn_inmovable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="goToInmovable"
+            android:text="@string/home_txt_inmovable" />
 
-    <!-- Contenedor para los contenidos del Navigation Drawer (usar NavigationView hace más rápidas las cosas) -->
+        <Button
+            android:id="@+id/home_btn_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:onClick="logout"
+            android:text="@string/home_txt_logout" />
+
+    </LinearLayout>
+
+    <!-- Contenedor para los contenidos del menú desplegable del Navigation Drawer -->
     <android.support.design.widget.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/home_lyt_nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/home_menu" />
+        app:menu="@menu/menu_home" />
 
 </android.support.v4.widget.DrawerLayout>
