--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,7 +22,9 @@
             android:id="@+id/home_lyt_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/colorPrimary" />
+            android:background="@color/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
         <Button
             android:id="@+id/home_btn_inmovable"
@@ -33,7 +35,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:onClick="goToInmovable"
-            android:text="@string/home_txt_inmovable" />
+            android:text="@string/home_menu_inmovable" />
 
         <Button
             android:id="@+id/home_btn_logout"
@@ -43,7 +45,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:onClick="logout"
-            android:text="@string/home_txt_logout" />
+            android:text="@string/home_menu_logout" />
 
     </LinearLayout>
 
@@ -54,6 +56,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:menu="@menu/menu_home" />
+        app:menu="@menu/menu_home"
+        app:headerLayout="@layout/menu_home_header" />
 
 </android.support.v4.widget.DrawerLayout>
