--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -2,11 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/home_menu_inmovable"
-            android:icon="@drawable/ic_menu_inmovable"
-            android:title="@string/home_menu_inmovable" />
-    </group>
-    <group>
+            android:id="@+id/home_menu_inmovables"
+            android:icon="@drawable/ic_menu_inmovables"
+            android:title="@string/home_menu_inmovables" />
+        <item
+            android:id="@+id/home_menu_clients"
+            android:icon="@drawable/ic_menu_clients"
+            android:title="@string/home_menu_clients" />
+        <item
+            android:id="@+id/home_menu_requests"
+            android:icon="@drawable/ic_menu_requests"
+            android:title="@string/home_menu_requests" />
         <item
             android:id="@+id/home_menu_options"
             android:title="@string/home_menu_options">
