--- a/app/src/main/res/layout/activity_inmovable_list.xml
+++ b/app/src/main/res/layout/activity_inmovable_list.xml
@@ -5,7 +5,7 @@
     android:id="@+id/inm_list_lyt_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.inmovable.list.view.InmovableListActivity">
+    tools:context=".features.inmovable.list.InmovableListActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/inm_list_lyt_toolbar"
