--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/login_lyt_scroll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".features.login.view.LoginActivity">
+    tools:context=".features.login.LoginActivity">
 
     <LinearLayout
         android:id="@+id/login_lyt_main"
