--- a/app/src/main/res/layout/fragment_inmovable_create_main.xml
+++ b/app/src/main/res/layout/fragment_inmovable_create_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".features.inmovable.create.view.InmovableCreateMainFragment">
+    tools:context=".features.inmovable.create.InmovableCreateMainFragment">
 
     <TextView
         android:id="@+id/inm_create_main_txt_name"
