--- a/app/src/main/res/layout/fragment_inmovable_create_location.xml
+++ b/app/src/main/res/layout/fragment_inmovable_create_location.xml
@@ -90,6 +90,29 @@
             android:inputType="textMultiLine" />
 
         <LinearLayout
+            android:id="@+id/inm_create_loc_lyt_gps_data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="16dp"
+            android:baselineAligned="false"
+            android:orientation="horizontal"
+            android:visibility="visible">
+
+            <TextView
+                android:id="@+id/inm_create_loc_txt_latitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/inm_create_loc_txt_longitude"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/inm_create_loc_lyt_gps_buttons"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -108,31 +131,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/inm_create_loc_btn_deactivate_gps" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/inm_create_loc_lyt_gps_data"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="16dp"
-            android:baselineAligned="false"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <TextView
-                android:id="@+id/inm_create_loc_txt_latitude"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/inm_create_loc_txt_latitude" />
-
-            <TextView
-                android:id="@+id/inm_create_loc_txt_longitude"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/inm_create_loc_txt_longitude" />
-
         </LinearLayout>
 
     </LinearLayout>
