--- a/app/src/main/res/layout/activity_inmovable_list.xml
+++ b/app/src/main/res/layout/activity_inmovable_list.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="@style/ToolbarTheme"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <FrameLayout
