--- a/app/src/main/res/layout/fragment_inmovable_create_location.xml
+++ b/app/src/main/res/layout/fragment_inmovable_create_location.xml
@@ -95,20 +95,21 @@
             android:layout_height="match_parent"
             android:layout_marginBottom="16dp"
             android:baselineAligned="false"
-            android:orientation="horizontal"
-            android:visibility="visible">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/inm_create_loc_txt_latitude"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="@string/inm_create_loc_txt_latitude_default" />
 
             <TextView
                 android:id="@+id/inm_create_loc_txt_longitude"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                android:text="@string/inm_create_loc_txt_longitude_default" />
 
         </LinearLayout>
 
@@ -130,6 +131,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:enabled="false"
                 android:text="@string/inm_create_loc_btn_deactivate_gps" />
         </LinearLayout>
 
