--- a/app/src/main/res/layout/fragment_inmovable_create_photo.xml
+++ b/app/src/main/res/layout/fragment_inmovable_create_photo.xml
@@ -17,16 +17,18 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/inm_create_photo_btn_take"
+            android:id="@+id/inm_create_photo_btn_add"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/inm_create_photo_btn_take" />
+
         <Button
-            android:id="@+id/inm_create_photo_btn_delete"
+            android:id="@+id/inm_create_photo_btn_remove"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:enabled="false"
             android:text="@string/inm_create_photo_btn_delete" />
     </LinearLayout>
 
