--- a/app/src/main/res/layout/activity_inmovable_create.xml
+++ b/app/src/main/res/layout/activity_inmovable_create.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     tools:context=".features.inmovable.create.InmovableCreateActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/inm_create_lyt_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,33 +16,33 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/inm_create_lyt_pager"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.design.widget.TabLayout
+        <com.google.android.material.tabs.TabLayout
             android:id="@+id/inm_create_lyt_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <android.support.design.widget.TabItem
+            <com.google.android.material.tabs.TabItem
                 android:id="@+id/inm_create_tab_main"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/inm_create_tab_main" />
 
-            <android.support.design.widget.TabItem
+            <com.google.android.material.tabs.TabItem
                 android:id="@+id/inm_create_tab_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/inm_create_tab_location" />
 
-            <android.support.design.widget.TabItem
+            <com.google.android.material.tabs.TabItem
                 android:id="@+id/inm_create_tab_photo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/inm_create_tab_photos" />
-        </android.support.design.widget.TabLayout>
-    </android.support.v4.view.ViewPager>
+        </com.google.android.material.tabs.TabLayout>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
